--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,7 @@
 	"version": "0.1",
 	"license": "MIT",
 	"require": {
-		"php": ">=5.3.0",
-		"pimple/pimple": "1.0.*@dev",
-		"php-activerecord/php-activerecord": "dev-master"
+		"php": ">=5.3.0"
 	},
 	"autoload": {
 		"psr-0": {
